# local-cq

./: README.md  pyproject.toml
src/localcq/: __init__.py  script.py
src/localcq/templates/: index.html
